--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 				<li><a href="#section-3" class="section-3">JavaScript</a></li>
 				<li><a href="#section-4" class="section-4">О себе</a></li>
 			</ul>
+			<a href="#" class="openbutton">
+				<span>&nbsp;</span>
+				<span>&nbsp;</span>
+				<span>&nbsp;</span>
+			</a>
 		</header>
 	<div class="content">	
 		<div class="container">
